force-app/main/Government_Documents/Permit_And_Licensing/objects/Payment_Record__c/Payment_Record__c.object-meta.xml
<CustomObject>
    <description>Tracks APD application fees and payment processing through Pay.gov integration. Manages payment status, transaction IDs, and payment verification workflows.</description>
    <label>Payment Record</label>
    <nameField>
        <displayFormat>PAY-{000000000}</displayFormat>
        <label>Payment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>