force-app/main/Government_Documents/Permit_And_Licensing/objects/Payment_Record__c/fields/APD_Application__c.field-meta.xml
<CustomField>
    <fullName>APD_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>APD Application</label>
    <referenceTo>APD_Application__c</referenceTo>
    <relationshipLabel>Payment Records</relationshipLabel>
    <relationshipName>Payment_Records</relationshipName>
    <type>Lookup</type>
</CustomField>