force-app/main/Government_Documents/Permit_And_Licensing/objects/Payment_Record__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <label>Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>