force-app/main/Government_Documents/Permit_And_Licensing/objects/Payment_Record__c/fields/Intent_Id__c.field-meta.xml
<CustomField>
    <fullName>Intent_Id__c</fullName>
    <label>Intent Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>