force-app/main/Government_Documents/Permit_And_Licensing/objects/Payment_Record__c/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <label>Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value><fullName>Pay.gov</fullName><default>true</default><label>Pay.gov</label></value>
            <value><fullName>ACH</fullName><default>false</default><label>ACH</label></value>
            <value><fullName>Wire</fullName><default>false</default><label>Wire</label></value>
            <value><fullName>Credit Card</fullName><default>false</default><label>Credit Card</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>