force-app/main/Government_Documents/Permit_And_Licensing/objects/Payment_Record__c/fields/Processed_On__c.field-meta.xml
<CustomField>
    <fullName>Processed_On__c</fullName>
    <label>Processed On</label>
    <type>DateTime</type>
</CustomField>