force-app/main/Government_Documents/Permit_And_Licensing/objects/Payment_Record__c/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <label>Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>