force-app/main/Government_Documents/Permit_And_Licensing/objects/Payment_Record__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CREATED</fullName>
            </value>
            <value>
                <fullName>ERROR</fullName>
            </value>
            <value>
                <fullName>NOT_CONFIGURED</fullName>
                <default>true</default>
                <label>NOT_CONFIGURED</label>
            </value>
            <value>
                <fullName>PAID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>